2011-04-06  Theodoros Paschidis <tpaschidis@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Nasty little space.

2011-04-05  Theodoros Paschidis <tpaschidis@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Fixed the case where we get into an infinite loop in case we recieve
	a start code of unknown nal_unit_type.

2011-04-05  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Lower log level of some messages

2011-04-05  Xavier Queralt  <xqueralt@flumotion.com>

	* README:
	* flumotion/component/producers/fms/Makefile.am:
	* flumotion/component/producers/fms/admin_gtk.py:
	* flumotion/component/producers/fms/fms.glade:
	* flumotion/component/producers/fms/fms.py:
	* flumotion/component/producers/fms/fms.xml:
	Added two tabs to better debug the input connections to fms producer.

2011-03-24  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/producers/fms/fms.py:
	Discard requests to clear metadata.
	We take care of clearing metadata when we receive changes in the
	metadata. There is no need for us to it to clear it in the
	@clearDataFrame handler.

2011-03-24  Josep Joan Ribas  <jribas@flumotion.com>

	reviewed by: Xavier Queralt

	* flumotion/component/producers/fms/fms.py:
	Allow receiving audio stream headers before metadata.
	When the audio tag containing the sequence header comes before
	the new metadata and the codec didn't change we have to keep the
	header and send it later.

2011-03-09  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	With the new GStreamer we don't need to set the caps of the appsrc.
	Actually, if we do, the next component receives the streamheader twice
	and can commit suicide if he doesn't like receiving two headers
	(e.g. decoder). See #15261

2011-03-09  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/producers/fms/fms.py:
	Remove startcodes from the incoming H.264 packets.